v3.9.6 (XXXX-XX-XX)
-------------------

* Updated arangosync to v2.13.0.

* Fixed issue #17291: Server crash on error in the PRUNE expression.
  Traversal PRUNE expressions containing JavaScript user-defined functions
  (UDFs) are now properly rejected in single server and cluster mode.
  PRUNE expressions that use UDFs require a V8 context for execution, which is
  not available on DB-servers in a cluster, and also isn't necessarily available
  for regular queries on single servers (a V8 context is only available if a
  query was executed inside Foxx or from inside a JS transaction, but not
  otherwise).

* Fix setting query memory limit to 0 for certain queries if a global memory
  limit is set, but overriding the memory limit is allowed.

* Fixed BTS-1125 Fixes handling of primarySortCache and primaryKeyCache
  properties in ArangoSearch views.

* Do not query vertex data in K_PATHS queries if vertex data is not needed.


v3.9.5 (2022-11-10)
-------------------

* Enable "collect-in-cluster" optimizer rule for SmartGraph edge collections.

* Show number of HTTP requests in cluster query profiles.

* Repair "load indexes into memory" function in the web UI.

* Solve a case of excessive memory consumption in certain AQL queries with IN
  filters with very long lists. Free sub-iterators as soon as they are
  exhausted.

* BTS-1070: Fixed query explain not dealing with an aggregate function without
  arguments and the WINDOW node not being defined as an Ast node type name.

* Fixed error handling of coordinator commit of streaming transactions.
  This bug could mean that a streaming transaction is reported to be
  successfully committed when in reality it isn't.

* Updating properties of a satellite collection breaks replicationFactor.

* Log the documents counts on leader and follower shards at the end of each
  successful shard synchronization.

* Updated OpenSSL to 1.1.1s.

* Added startup option `--query.log-failed` to optionally log all failed AQL